fix: adjusts to support dark mode correctly (#172)
* fix: adjusts to support dark mode correctly
* chore: adjust to cypress tests

--- a/tailwindcss/src/_variables.scss
+++ b/tailwindcss/src/_variables.scss
@@ -58,62 +58,65 @@
   --color-focus-dark: 37 150 190;
 }
 
-html[data-theme="dark"] {
-  color-scheme: dark;
-  --color-black: 0 0 0;
-  --color-base-1: 60 60 60;
-  --color-base-2: 40 40 40;
-  --color-base-3: 30 30 30;
-  --color-base-4: 50 51 55;
-  --color-inverted-1: 200 200 200;
-  --color-inverted-2: 255 255 255;
-  --color-inverted-3: 100 100 100;
-  --color-inverted-4: 40 40 40;
-  --color-on-primary: 0 0 0;
-  --color-on-success: 0 0 0;
-  --color-on-danger: 0 0 0;
-  --color-on-warning: 0 0 0;
-  --color-on-inverted: 0 0 0;
-  --color-on-base: 255 255 255;
-  --color-on-base-2: 255 255 255;
-  --color-on-base-3: 160 168 182;
-  --color-primary-light: 58 73 73;
-  --color-primary: 43 196 195;
-  --color-primary-dark: 12 152 152;
-  --color-primary-bold: 100 172 182;
-  --color-tertiary-light: 82 91 101;
-  --color-tertiary: 200 200 200;
-  --color-tertiary-dark: 99 105 112;
-  --color-tertiary-bold: 171 175 180;
-  --color-success-light: 62 76 53;
-  --color-success: 114 203 59;
-  --color-success-dark: 88 161 43;
-  --color-success-bold: 162 213 130;
-  --color-danger-light: 85 44 49;
-  --color-danger: 239 85 85;
-  --color-danger-dark: 184 0 21;
-  --color-danger-bold: 122 0 14;
-  --color-warning-light: 85 75 44;
-  --color-warning: 255 194 14;
-  --color-warning-dark: 224 168 0;
-  --color-warning-bold: 163 122 0;
-  --color-secondary-light: 74 80 83;
-  --color-secondary: 60 69 69;
-  --color-secondary-dark: 219 235 235;
-  --color-secondary-bold: 91 162 196;
-  --color-orange-promax: 255 64 7;
-  --color-google: 234 67 53;
-  --color-google-dark: 208 56 44;
-  --color-google-bold: 180 46 35;
-  --color-google-red: 255 76 76;
-  --color-google-blue: 54 141 247;
-  --color-google-purple: 137 20 204;
-  --color-google-green: 139 195 74;
-  --color-google-yellow: 244 180 0;
-  --color-card-stroke: 100 100 100;
-  --color-card-stroke-2: 100 100 100;
-  --color-card-shadow: 100 100 100;
-  --color-focus: 221 221 221;
-  --color-focus-light: 62 66 74;
-  --color-focus-dark: 37 150 190;
+html {
+  &[data-theme="dark"],
+  &.dark {
+    color-scheme: dark;
+    --color-black: 0 0 0;
+    --color-base-1: 60 60 60;
+    --color-base-2: 40 40 40;
+    --color-base-3: 30 30 30;
+    --color-base-4: 50 51 55;
+    --color-inverted-1: 200 200 200;
+    --color-inverted-2: 255 255 255;
+    --color-inverted-3: 100 100 100;
+    --color-inverted-4: 40 40 40;
+    --color-on-primary: 0 0 0;
+    --color-on-success: 0 0 0;
+    --color-on-danger: 0 0 0;
+    --color-on-warning: 0 0 0;
+    --color-on-inverted: 0 0 0;
+    --color-on-base: 255 255 255;
+    --color-on-base-2: 255 255 255;
+    --color-on-base-3: 160 168 182;
+    --color-primary-light: 58 73 73;
+    --color-primary: 43 196 195;
+    --color-primary-dark: 12 152 152;
+    --color-primary-bold: 100 172 182;
+    --color-tertiary-light: 82 91 101;
+    --color-tertiary: 200 200 200;
+    --color-tertiary-dark: 99 105 112;
+    --color-tertiary-bold: 171 175 180;
+    --color-success-light: 62 76 53;
+    --color-success: 114 203 59;
+    --color-success-dark: 88 161 43;
+    --color-success-bold: 162 213 130;
+    --color-danger-light: 85 44 49;
+    --color-danger: 239 85 85;
+    --color-danger-dark: 184 0 21;
+    --color-danger-bold: 122 0 14;
+    --color-warning-light: 85 75 44;
+    --color-warning: 255 194 14;
+    --color-warning-dark: 224 168 0;
+    --color-warning-bold: 163 122 0;
+    --color-secondary-light: 74 80 83;
+    --color-secondary: 60 69 69;
+    --color-secondary-dark: 219 235 235;
+    --color-secondary-bold: 91 162 196;
+    --color-orange-promax: 255 64 7;
+    --color-google: 234 67 53;
+    --color-google-dark: 208 56 44;
+    --color-google-bold: 180 46 35;
+    --color-google-red: 255 76 76;
+    --color-google-blue: 54 141 247;
+    --color-google-purple: 137 20 204;
+    --color-google-green: 139 195 74;
+    --color-google-yellow: 244 180 0;
+    --color-card-stroke: 100 100 100;
+    --color-card-stroke-2: 100 100 100;
+    --color-card-shadow: 100 100 100;
+    --color-focus: 221 221 221;
+    --color-focus-light: 62 66 74;
+    --color-focus-dark: 37 150 190;
+  }
 }
